MB-41712: Use std::_Exit() instead of _exit in ParentMonitor

From the callstack:
[... cut ...]
17 000000af`57cff780 00007ffc`5ad868df ucrtbase!exit+0xed
18 000000af`57cff7b0 00007ff6`3609bb1f ucrtbase!exit+0x7f
19 000000af`57cff800 00007ff6`3609bd6b memcached!<lambda_4d1eb2070d36a9f66ee8d456cd273e56>::operator()+0x13f [c:\jenkins\workspace\kv_engine-windows-master\kv_engine\daemon\parent_monitor.cc @ 70]
[... cut ...]

It looks like we're trying to call exit is being called and not
_exit causing cleanup to happen:

10 000000af`57cff4f0 00007ffc`4d6aae92 ucrtbase!execute_onexit_table+0x34

and in our code we are waiting for another thread to clean up
after itself as part of the shutdown.

Change-Id: If3bedc47513ae497e9b02e09fce915aab36ff193
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/137207
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Richard de Mellow <richard.demellow@couchbase.com>